# becoming

./: .gitignore  Cargo.toml  LICENSE  README.md  README.zh.md
crates/app/: Cargo.toml
crates/app/examples/: gravity.rs
crates/app/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: field.rs  lib.rs  math.rs  rule.rs
crates/physics/: Cargo.toml
crates/physics/src/: gravity.rs  lib.rs  reaction_diffusion.rs
crates/renderer/: Cargo.toml
crates/renderer/src/: colormap.rs  gpu.rs  lib.rs  window.rs
crates/universe/: Cargo.toml
crates/universe/src/: constants.rs  init.rs  lib.rs  state.rs
references/: README.md
shaders/compute/: evolve.wgsl
shaders/render/: display.wgsl
