[workspace]
members = [
    "crates/core",
    "crates/physics",
    "crates/universe",
    "crates/renderer",
    "crates/app",
]
resolver = "2"

[workspace.dependencies]
# GPU compute & rendering
wgpu = "22"
winit = "0.30"
bytemuck = { version = "1", features = ["derive"] }

# Math
glam = "0.29"

# Serialization (saving universe states)
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
anyhow = "1"
log = "0.4"
env_logger = "0.11"
pollster = "0.3"
