[package]
name = "becoming"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "becoming"
path = "src/main.rs"

[dependencies]
core = { path = "../core" }
physics = { path = "../physics" }
universe = { path = "../universe" }
renderer = { path = "../renderer" }
anyhow = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
pollster = { workspace = true }

[dev-dependencies]
macroquad = "0.4"
