[package]
name = "renderer"
version = "0.1.0"
edition = "2021"

[dependencies]
core = { path = "../core" }
universe = { path = "../universe" }
wgpu = { workspace = true }
winit = { workspace = true }
bytemuck = { workspace = true }
glam = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
pollster = { workspace = true }
